FIx firefox layout problem and the text selected problem

--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -279,14 +279,15 @@
                 .modal {
                     width: 588px;
                     height: fit-content;
+                    height: -moz-fit-content;
+                    height: -webkit-fit-content;
                     border-radius: 4px;
                     padding: 48px 36px 36px;
                     position: absolute;
-                    top: 0;
-                    bottom: 0;
-                    left: 0;
-                    right: 0;
+                    top: 50%;
+                    left: 50%;
                     margin: auto;
+                    transform: translate(-50%, -50%);
                     background:rgba(37,38,46,1);
                     & > h2 {
                         font-size:28px;
@@ -382,6 +383,8 @@
                 .error-modal {
                     width:476px;
                     height:fit-content;
+                    height: -moz-fit-content;
+                    height: -webkit-fit-content;
                     border-radius:4px;
                     padding-top: 40px;
                     & > img {
